frontend/test/should_pass/exact_002.grg
rule r {
	exact pattern {
		x: Node -:Edge-> y:Node;
	}
	replace {
	}
}

