frontend/test/should_fail/redirect_004.grg
rule r {
	x:Node; y:Node;

	modify {
		y !-e:Edge->! x;
	}
}

